# BookGenerator

book_generate_pipeline/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  work.py
book_generate_pipeline/config/: config.dev.yaml
book_generate_pipeline/docs/: 人工智能与药物设计 教案.docx  可控核聚变_jd.md
book_generate_pipeline/output/abstract/可控核聚变/: chapter1.md  (+11 more)
book_generate_pipeline/output/chapter/: 可控核聚变.md  离散数学.md
book_generate_pipeline/prompts/: prompt  prompt.py  prompt_abstract  prompt_book  prompt_book.py  prompt_book_step2  prompt_book_step2.py  prompt_book_step3  prompt_book_step3_bk  prompt_book_withqa  prompt_book_withqa_step2  prompt_chapter  prompt_chapter_refine  prompt_eval_chapter  prompt_practical_case  prompt_preface  prompt_select_project_qa
book_generate_pipeline/prompts_en/: prompt_abstract  prompt_book  prompt_book_step2  prompt_chapter  prompt_human  prompt_refine_chapter
book_generate_pipeline/scripts/: generate_book.py  list_litellm_models.py
book_generate_pipeline/src/: __init__.py
book_generate_pipeline/src/core/: __init__.py  book_generator.py  chapter_generator.py  chapter_types.py  material_pack_generator.py  topic_book_generator.py
book_generate_pipeline/src/models/: __init__.py  base.py  llm_providers.py
book_generate_pipeline/src/tools/: README.md  __init__.py  convert_format.py  database.py  draw_images.py  get_qa_pair.py  get_wiki_article.py  md2html_wrapper.py
book_generate_pipeline/src/utils/: __init__.py  config.py  file_helpers.py
book_generate_pipeline/tests/: __init__.py
(+247 files in other folders)
