[project]
name = "topic-book-generator"
version = "0.1.0"
description = "Generate educational books on STEM topics using AI"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "fastmcp>=0.1.0",
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "pdfplumber>=0.10.0",
    "pyyaml>=6.0.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
generate-book = "src.core.topic_book_generator:main"
